[gd_scene load_steps=5 format=2]

[ext_resource path="res://title.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/buttons/startButton.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/buttons/startButtonHover.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/music/title.wav" type="AudioStream" id=4]

[node name="title" type="Node" index="0"]

script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.580392, 0.596078, 0.8, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="start" type="TextureButton" parent="background" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -20.0
margin_right = 48.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="titleMusic" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="titleTween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="pressed" from="background/start" to="." method="_on_start_pressed"]

[connection signal="tween_completed" from="titleTween" to="." method="_on_titleTween_tween_completed"]


